# rust-rocket-api

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml  request.http
migrations/2025-02-27-092216_create_users02/: up.sql
src/: lib.rs  main.rs
src/config/: database.rs  logger.rs
src/controller/: user_controller.rs
src/controllers/: message_controller.rs  user_controller.rs
src/middelware/: request_logger.rs
src/middleware/: cors.rs
src/models/: message.rs  user.rs
src/repositories/: user_repositories.rs
src/routes/: message_route.rs  mod.rs  user_routes.rs
src/services/: message_service.rs  user_service.rs
